[kfilewidget] Fixing saving to files with quotes

- Escaping double quotes in KFileWidgetPrivate::setLocationText(QUrl)
- Adding a test for single-file mode (KFile::File)

BUG: 426728
(cherry picked from commit 6a5736ce30494f6deab3489725815a7d33e1bacf)